# echidna

./: .gitignore  BUG_HUNT_CHECKLIST.md  BUG_HUNT_FINDINGS.md  BUG_HUNT_RISKS.md  CHANGELOG.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  publish.yml  specs.yml
benches/: advanced.rs  bytecode.rs  comparison.rs  diffop.rs  forward.rs  gpu.rs  reverse.rs  stde.rs  taylor.rs
benches/common/: mod.rs
docs/: adr-deferred-work.md  algorithms.md  book-breakdown.md  design-principles.md  roadmap.md
docs/plans/: README.md
echidna-optim/: Cargo.toml  README.md
echidna-optim/src/: convergence.rs  implicit.rs  lib.rs  linalg.rs  line_search.rs  objective.rs  piggyback.rs  result.rs  sparse_implicit.rs
echidna-optim/src/solvers/: lbfgs.rs  mod.rs  newton.rs  trust_region.rs
echidna-optim/tests/: implicit.rs  implicit_custom_op.rs  integration.rs  line_search_eval_counts.rs  line_search_infeasible.rs  phase6_robustness.rs  phase8_solvers.rs  piggyback.rs  solvers.rs  sparse_implicit.rs  ws3_error_variants.rs  ws4_diagnostics.rs  ws7_error_variants.rs
specs/: README.md
specs/revolve/: Revolve.tla
src/: active_cell.rs  api.rs  breverse.rs  bytecode_tape.rs  checkpoint.rs  cross_country.rs  diffop.rs  dual.rs  dual_vec.rs  faer_support.rs  float.rs  laurent.rs  lib.rs  nalgebra_support.rs  ndarray_support.rs  nonsmooth.rs  opcode.rs  reverse.rs  scalar.rs  sparse.rs  stde.rs  tape.rs  taylor.rs  taylor_dyn.rs  taylor_ops.rs
src/bytecode_tape/: forward.rs  jacobian.rs  mod.rs  optimize.rs  parallel.rs  reverse.rs  serde_support.rs  sparse.rs  tangent.rs  taylor.rs  thread_local.rs
src/gpu/: cuda_backend.rs  mod.rs  stde_gpu.rs  taylor_codegen.rs  wgpu_backend.rs
src/gpu/kernels/: tape_eval.cu  taylor_eval.cu
src/gpu/shaders/: forward.wgsl  reverse.wgsl  tangent_forward.wgsl  tangent_reverse.wgsl  taylor_forward_2nd.wgsl
src/kernels/: mod.rs
src/stde/: estimator.rs  higher_order.rs  jet.rs  laplacian.rs  mod.rs  pde.rs  pipeline.rs  sparse.rs  types.rs
src/traits/: breverse_num_traits.rs  breverse_ops.rs  dual_vec_num_traits.rs  dual_vec_ops.rs  laurent_num_traits.rs  laurent_std_ops.rs  mod.rs  num_traits_impls.rs  simba_impls.rs  std_ops.rs  taylor_num_traits.rs  taylor_std_ops.rs
tests/: abs_kink_convention.rs  adept_tape_pooling.rs  api_tests.rs  asinh_acosh_large.rs  atan2_extreme_magnitudes.rs  batch.rs  bug_hunt_regressions.rs  bytecode_tape.rs  checkpoint.rs  clarke_shift_overflow.rs  comparison.rs  composed_nesting.rs  correctness.rs  cross_country.rs  custom_primitives.rs  diffop.rs  domain_nan_convention.rs  dual_vec.rs  faer_tests.rs  forward_mode.rs  gpu_cpu_parity.rs  gpu_cuda_kernel_parity.rs  gpu_cuda_tests.rs  gpu_kernel_parity.rs  gpu_stde.rs  gpu_upload_validation.rs  gpu_wgpu_tests.rs  hessian.rs  higher_order.rs  hypot_leading_zero_parity.rs  laurent.rs  laurent_zero_add.rs  mode_parity_matrix.rs  multi_output.rs  nalgebra_integration.rs  nalgebra_support_tests.rs  ndarray_tests.rs  newton_example.rs  nonsmooth.rs  numerical_robustness.rs  (+25 more)
