[package]
name = "echidna"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A high-performance automatic differentiation library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Entrolution/echidna"
documentation = "https://docs.rs/echidna"
readme = "README.md"
keywords = ["autodiff", "differentiation", "gradient", "jacobian", "scientific"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
num-traits = "0.2"
approx = { version = "0.5", optional = true }
simba = { version = "0.9", optional = true }
bumpalo = { version = "3", features = ["collections"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
nalgebra = "0.33"

[features]
default = ["simba"]
simba = ["dep:simba", "dep:approx"]
bytecode = ["dep:bumpalo"]

[[bench]]
name = "forward"
harness = false

[[bench]]
name = "reverse"
harness = false

[[bench]]
name = "bytecode"
harness = false
required-features = ["bytecode"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
